Modular fixes and moderate changes in the Prescription Print Styling & Removing emojies and Fixed Content Security Policy